Semana10/shell2
alumnos@sc310:~/CursoPF/Semana10$ ghci
GHCi, version 8.8.4: https://www.haskell.org/ghc/  :? for help
Prelude> :l trianguloPascal.hs
[1 of 1] Compiling Main             ( trianguloPascal.hs, interpreted )
Ok, one module loaded.
*Main> trian 0
[1]
*Main> trian 1
[1,1]
*Main> trian 2
[1,2,1]
*Main> trian 3
[1,3,3,1]
*Main> map trian [0..10]
[[1],[1,1],[1,2,1],[1,3,3,1],[1,4,6,4,1],[1,5,10,10,5,1],[1,6,15,20,15,6,1],[1,7,21,35,35,21,7,1],[1,8,28,56,70,56,28,8,1],[1,9,36,84,126,126,84,36,9,1],[1,10,45,120,210,252,210,120,45,10,1]]
*Main> :l trianguloPascal.hs
[1 of 1] Compiling Main             ( trianguloPascal.hs, interpreted )

trianguloPascal.hs:40:1: warning: [-Wtabs]
    Tab character found here.
    Please use spaces instead.
   |
40 |         b = trian (n-1)
   | ^^^^^^^^
Ok, one module loaded.
*Main> map trian [0..10]
[[1],[1,1],[1,2,1],[1,3,3,1],[1,4,6,4,1],[1,5,10,10,5,1],[1,6,15,20,15,6,1],[1,7,21,35,35,21,7,1],[1,8,28,56,70,56,28,8,1],[1,9,36,84,126,126,84,36,9,1],[1,10,45,120,210,252,210,120,45,10,1]]
*Main> map trian [0..20]
[[1],[1,1],[1,2,1],[1,3,3,1],[1,4,6,4,1],[1,5,10,10,5,1],[1,6,15,20,15,6,1],[1,7,21,35,35,21,7,1],[1,8,28,56,70,56,28,8,1],[1,9,36,84,126,126,84,36,9,1],[1,10,45,120,210,252,210,120,45,10,1],[1,11,55,165,330,462,462,330,165,55,11,1],[1,12,66,220,495,792,924,792,495,220,66,12,1],[1,13,78,286,715,1287,1716,1716,1287,715,286,78,13,1],[1,14,91,364,1001,2002,3003,3432,3003,2002,1001,364,91,14,1],[1,15,105,455,1365,3003,5005,6435,6435,5005,3003,1365,455,105,15,1],[1,16,120,560,1820,4368,8008,11440,12870,11440,8008,4368,1820,560,120,16,1],[1,17,136,680,2380,6188,12376,19448,24310,24310,19448,12376,6188,2380,680,136,17,1],[1,18,153,816,3060,8568,18564,31824,43758,48620,43758,31824,18564,8568,3060,816,153,18,1],[1,19,171,969,3876,11628,27132,50388,75582,92378,92378,75582,50388,27132,11628,3876,969,171,19,1],[1,20,190,1140,4845,15504,38760,77520,125970,167960,184756,167960,125970,77520,38760,15504,4845,1140,190,20,1]]
*Main> (map trian [0..20])!!16
[1,16,120,560,1820,4368,8008,11440,12870,11440,8008,4368,1820,560,120,16,1]
*Main> ((map trian [0..20])!!16)!!3
560
*Main> let f (x,y) = x in f (10,1)
10
*Main> let f (x,y) = x in f (10,10)
10
*Main> let f (x,y) = x in f (10,100)
10
*Main> let f (x,y) = x in f (10,1/0)
10
*Main> take 3 [4,5,6,74,34,43,1]
[4,5,6]
*Main> take 3 [4,5,6,74,34,43,1,1/0]
[4.0,5.0,6.0]
*Main> 1/0
Infinity
*Main> let dos = 2: dos in take 5 dos 
[2,2,2,2,2]
*Main> :l trianguloPascal.hs
[1 of 1] Compiling Main             ( trianguloPascal.hs, interpreted )

trianguloPascal.hs:70:20: error:
    • Occurs check: cannot construct the infinite type: a ~ [a]
    • In the expression: (head ls) : (tomar (n - 1) (tail ls))
      In an equation for ‘tomar’:
          tomar n ls | n > 1 = (head ls) : (tomar (n - 1) (tail ls))
    • Relevant bindings include
        ls :: [a] (bound at trianguloPascal.hs:70:9)
        tomar :: t -> [a] -> [a] (bound at trianguloPascal.hs:69:1)
   |
70 | tomar n ls | n>1 = (head ls): (tomar (n-1) (tail ls))
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Failed, no modules loaded.
Prelude> head [!,2,3]

<interactive>:21:8: error: parse error on input ‘,’
Prelude> head [1,2,3]
1
Prelude> tail [1,2,3]
[2,3]
Prelude> tail [1,2,3]
[2,3]
Prelude> :l trianguloPascal.hs
[1 of 1] Compiling Main             ( trianguloPascal.hs, interpreted )
Ok, one module loaded.
*Main> tomar 2 [1,3,5]
3
*Main> :l trianguloPascal.hs
[1 of 1] Compiling Main             ( trianguloPascal.hs, interpreted )
Ok, one module loaded.
*Main> tomar 2 [1,3,5]
[1,3]
*Main> tomar 3 [1,3,5]
[1,3,5]
*Main> tomar 4 [1,3,5]
[1,3,5,*** Exception: Prelude.head: empty list
*Main> let dos = 2: dos in tomar 5 dos 
[2,2,2,2,2]
*Main> 